# goobook

./: .gitignore  .prospector.yaml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.rst  CONTRIBUTORS.txt  HACKING.rst  Pipfile  README.rst  README.txt  check.sh  flake8.sh  generate_html.sh  generate_man_page.sh  goobook.1  goobook.1.rst  prospector.yaml  pylint.rc  pyproject.toml  setup.cfg  setup.py
goobook/: application.py  config.py  goobook.py  storage.py
scripts/: check-man.sh  check-rst.sh  check.sh  format.sh
